# gimbal-motion

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
.cargo/: config.example.toml  config.toml
.devcontainer/: devcontainer.json
src/: cmd.rs  gcode.rs  gimbal.rs  gimbal_pins.rs  lib.rs  main.rs  motor.rs  mv.rs  server.rs  server_response.rs  turret.rs  turret_pins.rs  uart_writer.rs  wifi.rs
