[package]
name = "gimbal-motion"
version = "0.1.0"
authors = ["cdaringe <cdaringe@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
resolver = "2"
rust-version = "1.71"

[lib]
name = "turret"
path = "src/lib.rs"

[[bin]]
name = "gimbal-motion"
test = false
bench = false

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.47.3", default-features = false }
libm = "0.2.8"

[build-dependencies]
embuild = "0.31.3"
